[project]
name = "robocommand"
version = "0.1.0"
description = "RoboBoat 2026 course management software"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.2",
    "protobuf==6.32.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["examples", "msgs"]
